update event swagger.yaml
