# feature/event/src/jvmMain/kotlin/dev/alxminyaev/feature/event/api/Paths.kt
@@ -1,0 +1,75 @@
+/**
+* Event service
+* Event service
+*
+* The version of the OpenAPI document: 1.0.0
+* Contact: alxminyaev@gmail.com
+*
+* NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+* https://openapi-generator.tech
+* Do not edit the class manually.
+*/
+package dev.alxminyaev.feature.event.api
+
+import io.ktor.locations.KtorExperimentalLocationsAPI
+import io.ktor.locations.Location
+
+object Paths {
+    /**
+     * Deleting of user confirmation in outstudy-event (Not implemented, HIGH Priority)
+     * 
+     * @param id ID of outstudy-event 
+     * @param userKeys  (optional)
+     */
+    @KtorExperimentalLocationsAPI
+    @Location("/api/v1/outstudy-event/{id}/user-confirm") class outStudydeleteConfirmationByEventId(val id: kotlin.Long, val userKeys: UserKeys? = null)
+
+    /**
+     * Get outstudy-event by id (Not implemented, MEDIUM Priority)
+     * 
+     * @param id ID of object to delete 
+     */
+    @KtorExperimentalLocationsAPI
+    @Location("/api/v1/outstudy-event/{id}") class outStudydeleteEventById(val id: kotlin.Long)
+
+    /**
+     * Deleting of user registration in outstudy-event (Not implemented, HIGH Priority)
+     * 
+     * @param id ID of outstudy-event 
+     */
+    @KtorExperimentalLocationsAPI
+    @Location("/api/v1/outstudy-event/{id}/registration") class outStudydeleteRegistrationEventById(val id: kotlin.Long)
+
+    /**
+     * Get outstudy-event by id (Not implemented, LOW Priority)
+     * 
+     * @param id ID of object to return 
+     */
+    @KtorExperimentalLocationsAPI
+    @Location("/api/v1/outstudy-event/{id}") class outStudygetEventById(val id: kotlin.Long)
+
+    /**
+     * Get list of  outstudy-events (Not implemented, HIGH Priority)
+     * 
+     * @param offset The number of items to skip before starting to collect the result set (optional)
+     * @param limit The numbers of items to return (optional)
+     */
+    @KtorExperimentalLocationsAPI
+    @Location("/api/v1/outstudy-event") class outStudygetEvents(val offset: kotlin.Long? = null, val limit: kotlin.Int? = null)
+
+    /**
+     * OutStudyEvent kind by id (Not implemented, MEDIUM Priority)
+     * 
+     * @param id ID of outstudy-event 
+     */
+    @KtorExperimentalLocationsAPI
+    @Location("/api/v1/outstudy-eventkind/{id}") class outStudydeleteEventKindById(val id: kotlin.Long)
+
+    /**
+     * Get list of OutStudyEventKinds (Not implemented, HIGH Priority)
+     * 
+     */
+    @KtorExperimentalLocationsAPI
+    @Location("/api/v1/outstudy-eventkind") class outStudygetEventKinds()
+
+}
