# feature/event/src/jvmMain/kotlin/dev/alxminyaev/feature/event/api/models/OutStudyEventKindGetResponse.kt
@@ -1,0 +1,24 @@
+/**
+* Event service
+* Event service
+*
+* The version of the OpenAPI document: 1.0.0
+* Contact: alxminyaev@gmail.com
+*
+* NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+* https://openapi-generator.tech
+* Do not edit the class manually.
+*/
+package dev.alxminyaev.feature.event.api.models
+
+
+/**
+ * 
+ * @param id 
+ * @param name 
+ */
+data class OutStudyEventKindGetResponse (
+    val id: kotlin.Int,
+    val name: kotlin.String
+) 
+
