# feature/event/src/jvmMain/kotlin/dev/alxminyaev/feature/event/api/models/OutStudyEventPostRequest.kt
@@ -1,0 +1,47 @@
+/**
+* Event service
+* Event service
+*
+* The version of the OpenAPI document: 1.0.0
+* Contact: alxminyaev@gmail.com
+*
+* NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+* https://openapi-generator.tech
+* Do not edit the class manually.
+*/
+package dev.alxminyaev.feature.event.api.models
+
+
+/**
+ * 
+ * @param name 
+ * @param address 
+ * @param outstudyEventKind 
+ * @param status 
+ * @param description 
+ * @param dateStart UTC
+ * @param dateEnd UTC
+ * @param dateRegistrationEnd UTC
+ * @param maxMembers -1 - not defended value
+ * @param minMembers -1 - not defended value
+ * @param isNeedMemberConfirmation 
+ */
+data class OutStudyEventPostRequest (
+    val name: kotlin.String,
+    val address: kotlin.String,
+    val outstudyEventKind: kotlin.Int,
+    val status: kotlin.Int,
+    val description: kotlin.String? = null,
+    /* UTC */
+    val dateStart: java.time.LocalDateTime? = null,
+    /* UTC */
+    val dateEnd: java.time.LocalDateTime? = null,
+    /* UTC */
+    val dateRegistrationEnd: java.time.LocalDateTime? = null,
+    /* -1 - not defended value */
+    val maxMembers: kotlin.Int? = null,
+    /* -1 - not defended value */
+    val minMembers: kotlin.Int? = null,
+    val isNeedMemberConfirmation: kotlin.Boolean? = null
+) 
+
